--- a/common/schema_versions/isa_mappings/manifest_field_layouts/asg_manifest_fields_v2.5.json
+++ b/common/schema_versions/isa_mappings/manifest_field_layouts/asg_manifest_fields_v2.5.json
@@ -118,21 +118,21 @@
                 "type": "string",
                 "required": true,
                 "enum": [
-                    "ADULT",
-                    "EGG",
-                    "EMBRYO",
-                    "GAMETOPHYTE",
-                    "JUVENILE",
-                    "LARVA",
-                    "PUPA",
-                    "SPORE_BEARING_STRUCTURE",
-                    "SPOROPHYTE",
-                    "VEGETATIVE_CELL",
-                    "VEGETATIVE_STRUCTURE",
-                    "ZYGOTE",
-                    "NOT_APPLICABLE",
-                    "NOT_COLLECTED",
-                    "NOT_PROVIDED"
+                    "adult",
+                    "egg",
+                    "embryo",
+                    "gametophyte",
+                    "juvenile",
+                    "larva",
+                    "pupa",
+                    "spore-bearing structure",
+                    "sporophyte",
+                    "vegetative cell",
+                    "vegetative structure",
+                    "zygote",
+                    "not applicable",
+                    "not collected",
+                    "not provided"
                 ]
             },
             {
@@ -146,10 +146,10 @@
                     "HERMAPHRODITE_MONOECIOUS",
                     "FEMALE",
                     "MALE",
+                    "SEXUAL_MORPH",
                     "NOT_APPLICABLE",
                     "NOT_COLLECTED",
-                    "NOT_PROVIDED",
-                    "SEXUAL_MORPH"
+                    "NOT_PROVIDED"
                 ]
             },
             {
@@ -276,7 +276,7 @@
                     "UNIVERSITY OF BRITISH COLUMBIA",
                     "UNIVERSITY OF CALIFORNIA",
                     "UNIVERSITY OF DERBY",
-                    "UNIVERSITY OF ORGEON",
+                    "UNIVERSITY OF OREGON",
                     "UNIVERSITY OF RHODE ISLAND",
                     "UNIVERSITY OF VIENNA (CEPHALOPOD)",
                     "UNIVERSITY OF VIENNA (MOLLUSC)"
@@ -860,6 +860,7 @@
                     "ROYAL BOTANIC GARDEN EDINBURGH",
                     "ROYAL BOTANIC GARDENS KEW/NATURAL HISTORY MUSEUM",
                     "UNIVERSITY OF OXFORD",
+                    "NOT_APPLICABLE",
                     "NOT_COLLECTED",
                     "NOT_PROVIDED"
                 ]
@@ -896,10 +897,6 @@
                 "type": "string",
                 "required": true,
                 "enum": [
-                    "**OTHER_FUNGAL_TISSUE**",
-                    "**OTHER_PLANT_TISSUE**",
-                    "**OTHER_REPRODUCTIVE_ANIMAL_TISSUE**",
-                    "**OTHER_SOMATIC_ANIMAL_TISSUE**",
                     "ABDOMEN",
                     "ANTERIOR_BODY",
                     "BLADE",
@@ -939,9 +936,6 @@
                     "MUSCLE",
                     "MYCELIUM",
                     "MYCORRHIZA",
-                    "NOT_APPLICABLE",
-                    "NOT_COLLECTED",
-                    "NOT_PROVIDED",
                     "OVARY_ANIMAL",
                     "OVIDUCT",
                     "PANCREAS",
@@ -969,7 +963,14 @@
                     "THORAX",
                     "UNICELLULAR_ORGANISMS_IN_CULTURE",
                     "WHOLE_ORGANISM",
-                    "WHOLE_PLANT"
+                    "WHOLE_PLANT",
+                    "**OTHER_FUNGAL_TISSUE**",
+                    "**OTHER_PLANT_TISSUE**",
+                    "**OTHER_REPRODUCTIVE_ANIMAL_TISSUE**",
+                    "**OTHER_SOMATIC_ANIMAL_TISSUE**",
+                    "NOT_APPLICABLE",
+                    "NOT_COLLECTED",
+                    "NOT_PROVIDED"
                 ]
             },
             {
@@ -1074,7 +1075,8 @@
                     "DNA",
                     "RNA",
                     "biological sample/tissue from non-infectious organism",
-                    "inactivated biological sample from infectious organismlive biological sample from infectious organism"
+                    "inactivated biological sample from infectious organism",
+                    "live biological sample from infectious organism"
                 ]
             },
             {
